--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+.nav-ul li{
+display: inline-block;
+padding: 10px;
+color: white;
+text-decoration: none;
 }
+.nav-ul{
+  padding: 5px;
+  margin: 0;
+  background-color: skyblue;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav-ul li a {
   color: white;
+  text-decoration: none;
+  margin: 12px;
+  font-size: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.footer{
+   position: absolute;
+   background-color: skyblue;
+   bottom: 0;
+   text-align: center;
+   width: 100%;
+
+}
+.signup-box ,.product-box{
+  margin-left: 40vw;
+}
+.login-box{
+  margin-top: 20vh;
+  margin-left: 40vw;
+}
+.validErr{
+  margin: -20px;
+  display: block;
+  margin-left: 25px;
+  color: red;
+}
+.input,.input-product-box{
+  display: block;
+  margin: 25px;
+  padding: 7px;
+  width: 300px;
+  border: 1px solid skyblue;
+}
+.logo{
+  width: 110px;
+  float: left;
+  border-radius: 50%;
+  margin-top: 3px;
+  margin-left: 20px;
+}
+.btn{
+  background-color: skyblue;
+  cursor: pointer;
+  width: 150px;
+  margin: 30px;
+  padding: 10px;
+  border-radius: 10px;
+
+}
+.nav-right{
+  text-align: right;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product-list{
+  text-align: center;
+  margin-top: 50px;
+}
+.product-list ul li{
+display: inline-block;
+border: 1px solid skyblue;
+width: 150px;
+padding: 5px;
+}
+.serach-box{
+  width: 400px;
+  margin: 20px;
+  height: 40px;
+  border: 1px solid skyblue;
+  padding-left: 20px;
 }
